manifests/pocrandd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocrandd-deploy
spec:
  selector:
    matchLabels:
      app: pocrandd-pod
  template:
    metadata:
      labels:
        app: pocrandd-pod
    spec:
      containers:
      - name: pocrandd
        image: qapocrandd.azurecr.io/wasmapp:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pocrandd-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: pocrandd-pod
